# cpp_imageNN

./: README.md  deploy_key_cppinn.pub  deploy_key_cppinn.pub.pub  main.cpp
Original dataset/: CMakeLists.txt
